--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Team DePaul">
 
 		<style type="text/css">
-	    	body { padding-top: 60px; padding-bottom: 40px; }
+	    	body { padding-top: 60px; }
 		</style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -132,7 +132,7 @@ align: 'right'};
 		<script type="text/javascript" src="assets/js/modules/exporting.js"></script>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
-				<div class="container">
+				<div class="container-fluid">
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -241,4 +241,8 @@ align: 'right'};
 
 				</div> -->
 			</div>
+            <div class="footer" style="width:230px; margin:0 auto;">
+               <center> 
+                <a href="about.html">Learn about this Project</a> | <a href="https://explore.data.gov/Other/Persons-Obtaining-Legal-Permanent-Resident-Status-/6xns-6yj4">Source</a></center>
+            </div>
 		</div>
