--- a/samerica.html
+++ b/samerica.html
@@ -7,9 +7,9 @@
 		<meta name="description" content="">
 		<meta name="author" content="Team DePaul">
 
-		<style type="text/css">
-	    	body { padding-top: 60px; padding-bottom: 40px; }
-		</style>
+        <style type="text/css">
+            body { padding-top: 60px; }
+        </style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
@@ -121,17 +121,21 @@
 			</div>
 		</div>
 
-		<div class="container-fluid">
-			<div class="row-fluid">
-				<div class="span12" style="background:orange">
-					   <div id="con1" style="min-width: 400px; height: 550px; margin: 0 auto"></div>
-				</div>
-<!-- 				<div class="span1">
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span12" style="background:orange">
+                       <div id="con1" style="min-width: 400px; height: 550px; margin: 0 auto"></div>
+                </div>
+<!--                <div class="span1">
 
-					<table class="table table-bordered table-striped">
-						<tr><td><button id="b4">Hide third category</button></td></tr><tr><td><button id="b5">Show third category</button></td></tr>
-					</table>
+                    <table class="table table-bordered table-striped">
+                        <tr><td><button id="b4">Hide third category</button></td></tr><tr><td><button id="b5">Show third category</button></td></tr>
+                    </table>
 
-				</div> -->
-			</div>
-		</div>
+                </div> -->
+            </div>
+            <div class="footer" style="width:230px; margin:0 auto;">
+               <center> 
+                <a href="about.html">Learn about this Project</a> | <a href="https://explore.data.gov/Other/Persons-Obtaining-Legal-Permanent-Resident-Status-/6xns-6yj4">Source</a></center>
+            </div>
+        </div>
