add github button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 		<style type="text/css">
 	    	body { padding-top: 60px; }
+	    	#forkme_banner {
+				display: block;
+				position: absolute;
+				top: 0;
+				right: -230px;
+				z-index: 10;
+				padding: 10px 50px 10px 10px;
+				color: #ffffff;
+				background: url('assets/img/blacktocat.png') no-repeat 95% 50%;
+				border-bottom-left-radius: 2px;
+				border-bottom-right-radius: 2px;
+			}
 		</style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -151,6 +163,7 @@ align: 'right'};
                             <li><a href="namerica.html">N. America</a></li>
                             <li><a href="oceania.html">Oceania</a></li>
                             <li><a href="samerica.html">S. America</a></li>
+                            <li><a id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a></li>
 						</ul>
 					</div>
 				</div>
