Modified Fork link to match styles and to be resolution indepedent; added description to export button

--- a/about.html
+++ b/about.html
@@ -8,9 +8,11 @@
 		<meta name="author" content="Team DePaul">
 
 
-        <style type="text/css">
-            body { padding-top: 60px; }
-        </style>
+		<style type="text/css">
+	    	body { padding-top: 60px; }
+	    	#forkme_banner { background: url('assets/img/git.png') no-repeat 95% 50%; color: #999; padding: 10px 50px 10px 10px; }
+            #forkme_banner:hover { background: url('assets/img/git_hover.png') no-repeat 95% 50%; color: #fff; text-decoration: none; }
+		</style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
@@ -19,7 +21,7 @@
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
-				<div class="container">
+				<div class="container-fluid">
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -37,8 +39,9 @@
                             <li><a href="europe.html">Europe</a></li>
                             <li><a href="namerica.html">N. America</a></li>
                             <li><a href="oceania.html">Oceania</a></li>
-                            <li><a href="samerica.html">S. America</a></li>
+                            <li><a href="samerica.html">S. America</a></li>   
 						</ul>
+                        <a class="pull-right" id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a>
 					</div>
 				</div>
 			</div>
@@ -58,9 +61,9 @@
                 <div class="span7" style="height:525px;padding-top:80px">
                               <h2>About the App</h2>
                               <p>This app was built over the course of two days during the <a href="http://www.chicagomigrahack.com/">Chicago MigraHack Hackathon</a> that took place May 31 - June 2, 2013 in Chicago, Illinois at the incubator and coworking space, Cibola. The data used in this app was obtained from www.data.gov and can be found in its raw form <a href="https://explore.data.gov/Other/Persons-Obtaining-Legal-Permanent-Resident-Status-/6xns-6yj4">here</a>.</p>
-                              <p>It was created using HTML, CSS, and JavaScript. It utilizes the <a href="http://www.littlesparkvt.com/flatstrap/">Flatstrap</a> CSS framework and the <a href="http://www.highcharts.com/">Highcharts</a> JavaScript library; all data is being pulled into the app using a custom written parser also written in JavaScript.</p>
+                              <p>It was created using HTML, CSS, and JavaScript. It utilizes the <a href="http://www.littlesparkvt.com/flatstrap/">Flatstrap</a> CSS framework, <a href="http://jquery.com/">jQuery</a>, and the <a href="http://www.highcharts.com/">Highcharts</a> JavaScript library; all data is being pulled into the app using a custom written parser also written in JavaScript.</p>
                               <h2>About the Developers</h2>
-                              <p>This web app was developed by Paul Duszak, Temuulen Erdenekhuu, and Alex Mccarten-Gibbs (aka Team DePaul). All three are undergraduate students studying Computer Science at DePaul University in Chicago, Illinois.</p>
+                              <p>This web app was developed by Paul Duszak, Temuulen Erdenekhuu, and Alex Mccarten-Gibbs<br/> (aka Team DePaul). All three are undergraduate students studying Computer Science at DePaul University in Chicago, Illinois.</p>
                     <p></p>
                 </div>
 <!-- 				<div class="span1">
