--- a/africa.html
+++ b/africa.html
@@ -9,6 +9,8 @@
 
         <style type="text/css">
             body { padding-top: 60px; }
+            #forkme_banner { background: url('assets/img/git.png') no-repeat 95% 50%; color: #999; padding: 10px 50px 10px 10px; }
+            #forkme_banner:hover { background: url('assets/img/git_hover.png') no-repeat 95% 50%; color: #fff; text-decoration: none; }
         </style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -116,6 +118,7 @@
                             <li><a href="oceania.html">Oceania</a></li>
                             <li><a href="samerica.html">S. America</a></li>
                         </ul>
+                        <a class="pull-right" id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a>
 					</div>
 				</div>
 			</div>
