--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 
 		<style type="text/css">
 	    	body { padding-top: 60px; }
-	    	#forkme_banner {
-				position: absolute;
-				top: 0;
-				right: -230px;
-				padding: 10px 50px 10px 10px;
-				color: #ffffff;
-				background: url('assets/img/blacktocat.png') no-repeat 95% 50%;
-			}
+	    	#forkme_banner { background: url('assets/img/git.png') no-repeat 95% 50%; color: #999; padding: 10px 50px 10px 10px; }
+            #forkme_banner:hover { background: url('assets/img/git_hover.png') no-repeat 95% 50%; color: #fff; text-decoration: none; }
 		</style>
 
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -158,9 +152,9 @@ align: 'right'};
                             <li><a href="europe.html">Europe</a></li>
                             <li><a href="namerica.html">N. America</a></li>
                             <li><a href="oceania.html">Oceania</a></li>
-                            <li><a href="samerica.html">S. America</a></li>
-                            <li><a id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a></li>
+                            <li><a href="samerica.html">S. America</a></li>   
 						</ul>
+                        <a class="pull-right" id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a>
 					</div>
 				</div>
 			</div>
