--- a/about.html
+++ b/about.html
@@ -1,61 +1,14 @@
-<!DOCTYPE HTML>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Chicago MigraHack WebApp</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="Team DePaul">
 
-
-		<style type="text/css">
-	    	body { padding-top: 60px; }
-	    	#forkme_banner { background: url('assets/img/git.png') no-repeat 95% 50%; color: #999; padding: 10px 50px 10px 10px; }
-            #forkme_banner:hover { background: url('assets/img/git_hover.png') no-repeat 95% 50%; color: #fff; text-decoration: none; }
-		</style>
-
-		<link href="assets/css/bootstrap.css" rel="stylesheet">
-		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-	</head>
-
-	<body>
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="navbar-inner">
-				<div class="container-fluid">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-					</a>
-					<a class="brand" href="index.html">Chicago MigraHack WebApp</a>
-					<div class="nav-collapse collapse">
-						<ul class="nav">
-							<li><a href="index.html">Regional Breakdown</a></li>
-                            <li><p style="padding-left:30px; padding-right:10px;"class="navbar-text">Sort by:</p></li>
-							<li><a href="africa.html">Africa</a></li>
-                            <li><a href="asia.html">Asia</a></li>
-                            <li><a href="europe.html">Europe</a></li>
-                            <li><a href="namerica.html">N. America</a></li>
-                            <li><a href="oceania.html">Oceania</a></li>
-                            <li><a href="samerica.html">S. America</a></li>   
-						</ul>
-                        <a class="pull-right" id="forkme_banner" href="https://github.com/cindablock/migrahack">Fork Me on GitHub</a>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="container">
 			<div class="row-fluid">
 				
                 
                 <div class="span4">
-                    <img style="padding-top:50px" src="assets/img/full.png" />
+                    <img style="padding-top:50px" src="/assets/img/full.png" />
                     <h3>About Chicago MigraHack</h3>
                     <p>The purpose of Chicago Migrahack is to foster the use of technology and open data to innovate information around immigration. In Spanish, the word "migra" refers to immigration."</p>
-<p>"We want to bring together our communities to create innovative platforms around one of the most debated topics today: Immigration</p>
-<p>You can find MigraHack on <a href="https://twitter.com/Migrahack">Twitter</a> and <a href="https://www.facebook.com/migrahack">Facebook</a>.
+		    <p>"We want to bring together our communities to create innovative platforms around one of the most debated topics today: Immigration</p>
+		    <p>You can find MigraHack on <a href="https://twitter.com/Migrahack">Twitter</a> and <a href="https://www.facebook.com/migrahack">Facebook</a>.
                 </div><div class="span1"></div>
 
                 <div class="span7" style="height:525px;padding-top:80px">
@@ -66,16 +19,9 @@
                               <p>This web app was developed by Paul Duszak, Temuulen Erdenekhuu, and Alex Mccarten-Gibbs<br/> (aka Team DePaul). All three are undergraduate students studying Computer Science at DePaul University in Chicago, Illinois.</p>
                     <p></p>
                 </div>
-<!-- 				<div class="span1">
-
-					<table class="table table-bordered table-striped">
-						<tr><td><button id="b4">Hide third category</button></td></tr><tr><td><button id="b5">Show third category</button></td></tr>
-					</table>
-
-				</div> -->
-			</div>
+	    </div>
             <div class="footer" style="width:230px; margin:0 auto;">
                <center> 
-                <a href="about.html">Learn about this Project</a> | <a href="https://explore.data.gov/Other/Persons-Obtaining-Legal-Permanent-Resident-Status-/6xns-6yj4">Source</a></center>
+                <a href="/about.html">Learn about this Project</a> | <a href="https://explore.data.gov/Other/Persons-Obtaining-Legal-Permanent-Resident-Status-/6xns-6yj4">Source</a></center>
             </div>
         </div>
